hydro_lang/src/rewrites/snapshots/hydro_lang__rewrites__profiler__tests__profiler_wrapping_all_operators.snap
---
source: hydro_lang/src/rewrites/profiler.rs
expression: "&built.ir()"
---
[
    ForEach {
        f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , () > ({ use crate :: __staged :: rewrites :: profiler :: tests :: * ; | n | println ! ("{}" , n) }),
        input: Unpersist {
            inner: Map {
                f: stageleft :: runtime_support :: fn1_type_hint :: < i32 , i32 > ({ use crate :: __staged :: rewrites :: profiler :: tests :: * ; | v | v + 1 }),
                input: Persist {
                    inner: Source {
                        source: Iter(
                            { use crate :: __staged :: rewrites :: profiler :: tests :: * ; 0 .. 10 },
                        ),
                        location_kind: Process(
                            0,
                        ),
                        metadata: HydroNodeMetadata {
                            location_kind: Process(
                                0,
                            ),
                            output_type: Some(
                                i32,
                            ),
                        },
                    },
                    metadata: HydroNodeMetadata {
                        location_kind: Process(
                            0,
                        ),
                        output_type: Some(
                            i32,
                        ),
                    },
                },
                metadata: HydroNodeMetadata {
                    location_kind: Process(
                        0,
                    ),
                    output_type: Some(
                        i32,
                    ),
                },
            },
            metadata: HydroNodeMetadata {
                location_kind: Process(
                    0,
                ),
                output_type: Some(
                    i32,
                ),
            },
        },
    },
]
